metatagy, open graph, feedy pro heureka + zbozi + google, sitemap xml, robots.txt, 404

--- a/src/AppBundle/Resources/public/less/page.less
+++ b/src/AppBundle/Resources/public/less/page.less
@@ -4,6 +4,10 @@
     text-align: center;
   }
 
+  h3 {
+    text-align: center;
+  }
+
   .article, article {
     margin-top: 40px;
   }
@@ -46,6 +50,6 @@
 
 .about-us {
   p {
-    text-align: justify;
+    text-align: center;
   }
 }
