--- a/src/AppBundle/Resources/views/ShopCart/cart.html.twig
+++ b/src/AppBundle/Resources/views/ShopCart/cart.html.twig
@@ -76,3 +76,5 @@
     {{ parent() }}
     <script src="{{ asset('js/shopping-cart.js') }}"></script>
 {% endblock %}
+
+{% block title %}1/3 Objednávka - Volba dopravy a platby{% endblock %}
