--- a/src/AppBundle/Resources/views/ShopCart/customer.html.twig
+++ b/src/AppBundle/Resources/views/ShopCart/customer.html.twig
@@ -289,3 +289,5 @@
     <script src="{{ asset('js/jqueryvalidation/localization/messages_cs.js') }}"></script>
     <script src="{{ asset('js/customer.js') }}"></script>
 {% endblock %}
+
+{% block title %}2/3 Objednávka - Dodací a fakturační údaje{% endblock %}
