--- a/src/AppBundle/Resources/views/Page/contact.html.twig
+++ b/src/AppBundle/Resources/views/Page/contact.html.twig
@@ -8,7 +8,7 @@
     <div class="article row">
         <div class="col-md-3"></div>
         <div class="col-md-4">
-            <strong>Zákaznická linka: </strong>+420 728 870 246<br />
+            <strong>Telefon: </strong>+420 728 870 246<br />
             <strong>E-mail:</strong> <a href="mailto:info@gowood.cz">info@gowood.cz</a><br /><br />
 
             <strong>Bankovní spojení:</strong><br />
@@ -33,7 +33,7 @@
 
     </div>
 
-    <h1>Napište nám</h1>
+    <h3>Napište nám</h3>
 
     <div class="article row">
         <div class="col-md-3"></div>
@@ -47,3 +47,5 @@
     </div>
 
 {% endblock %}
+
+{% block title %}Kontakt{% endblock %}
