--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="cs">
     <head>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129407057-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-129407057-1');
+        </script>
+
+
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -226,6 +237,7 @@
             <script src="{{ asset('js/jqueryvalidation/jquery.validate.min.js') }}"></script>
             <script src="{{ asset('js/jqueryvalidation/localization/messages_cs.js') }}"></script>
             <script src="{{ asset('js/jquery.fancybox.min.js') }}"></script>
+            <script src="{{ asset('js/cookies-message.min.js') }}"></script>
             <script src="{{ asset('js/main.js') }}"></script>
         {% endblock %}
     </body>
