uvodni text, chat, text odeslani

--- a/src/AppBundle/Resources/views/Contact/form.html.twig
+++ b/src/AppBundle/Resources/views/Contact/form.html.twig
@@ -1,5 +1,5 @@
 {{form_start(form, {'attr': {'id': 'contact-form'}})}}
-  <div id="contact-form-message" class="hide alert alert-success">Dotaz by odeslán. Budeme Vás kontaktovat co nejdříve.</div>
+  <div id="contact-form-message" class="hide alert alert-success">Dotaz byl odeslán. Budeme Vás kontaktovat co nejdříve.</div>
   {{form_widget(form)}}
   <div align="right"><input type="submit" value="Odeslat dotaz" class="btn btn-success" /></div>
 {{form_end(form)}}
