--- a/src/AppBundle/Resources/views/ShopCatalog/index.html.twig
+++ b/src/AppBundle/Resources/views/ShopCatalog/index.html.twig
@@ -6,7 +6,7 @@
       <div class="col-md-1"></div>
       <div class="col-md-10">
           <p class="align-center">
-              Jsme malá dílna, která vyrábí dekorace ze dřeva. Všechny naše produkty sami navrhujeme a vyrábíme. Vy si ale můžete říct, co máme na výrobky napsat, případně vyřezat.
+              S radostí děláme věci ze dřeva! Všechny naše produkty navrhujeme a vyrábíme sami. Vy si ale můžete říct, co máme na výrobky napsat, případně vyřezat.
               <br /><br />Pokud byste chtěli na výrobku větší úpravy, tak nám určitě napište, pokusíme se to vymyslet.
               A kdybyste měli nápad na dřevěný výrobek, který vůbec nemáme, tak se taky ozvěte, třeba ho zvládnem :)</p></div>
       <div class="col-md-1"></div>
