slideshow na uvodu, uprava vzhledu kosiku na mobilu

--- a/src/AppBundle/Resources/views/ShopCart/cart.html.twig
+++ b/src/AppBundle/Resources/views/ShopCart/cart.html.twig
@@ -28,7 +28,7 @@
             </div>
         {% else %}
 
-            <p>Váš košík je prázdný</p>
+            <p class="align-center">Váš košík je prázdný</p>
 
         {% endif %}
 
