--- a/src/AppBundle/Resources/public/less/cart.less
+++ b/src/AppBundle/Resources/public/less/cart.less
@@ -66,12 +66,25 @@
           display: inline-block;
           margin-left: 15px;
         }
+
+        @media (max-width: @sm-max) {
+          img {
+            display: none;
+          }
+        }
       }
 
       .price {
         display: inline-block;
         float: right;
         font-weight: bold;
+        color: @orange;
+
+        @media (max-width: @sm-max) {
+         float: none;
+          display: block;
+          text-align: center;
+        }
       }
 
       .description {
@@ -80,6 +93,9 @@
 
       .description.show {
         display: block;
+        @media (max-width: @sm-max) {
+          text-align: center;
+        }
       }
     }
 
@@ -90,7 +106,14 @@
       }
 
       span.icon {
-        display: inline-block
+        display: inline-block;
+        @media (max-width: @sm-max) {
+          width: 100%;
+          text-align: center;
+          img {
+            max-width: 100%;
+          }
+        }
       }
     }
 
@@ -100,6 +123,9 @@
   #box-step1-cart-items {
     .subtotal {
       text-align: right;
+      @media (max-width: @sm-max) {
+        text-align: center;
+      }
 
       span {
         font-weight: bold;
@@ -155,7 +181,7 @@
 
     .name {
 
-      width: 300px;
+      width: 420px;
 
       @media (max-width: @sm-max) {
         width: 100%;
@@ -206,7 +232,7 @@
     }
 
     .price {
-      color: #0275d8;
+      color: @orange;
       font-weight: bold;
       font-size: 18px;
       line-height: 100px;
@@ -220,7 +246,15 @@
       }
     }
 
+    .delete {
+      width: 35px;
+      @media (max-width: @sm-max) {
+        width: 100%;
+      }
+    }
+
     .delete a {
+
       line-height: 100px;
       @media (max-width: @sm-max) {
         line-height: 30px;
@@ -274,6 +308,11 @@
 
     a.link {
       line-height: 60px;
+
+      @media (max-width: @sm-max) {
+        display: block;
+        text-align: center;
+      }
     }
 
     a.btn, button {
@@ -286,6 +325,8 @@
 
       @media (max-width: @sm-max) {
         font-size: 17px;
+        width: 100%;
+
       }
 
       i {
@@ -392,13 +433,16 @@
       padding: 10px;
       margin-top: 10px;
 
-      .price {
-        display: block;
-      }
+    }
+
+    .price {
+      display: block;
+      color: @orange;
+      font-weight: bold;
     }
 
     .total-price {
-      color: #0275d8;
+      color: @orange;
       font-weight: bold;
     }
   }
