--- a/src/AppBundle/Resources/public/less/general.less
+++ b/src/AppBundle/Resources/public/less/general.less
@@ -160,3 +160,51 @@ footer {
     cursor: pointer;
   }
 }
+/*
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 40px;
+  width: 40px;
+  outline: black;
+  background-size: 100%, 100%;
+  border-radius: 50%;
+  border: 2px solid black;
+  background-image: none;
+  background-color: #fff;
+}
+
+.carousel-control-next-icon:after
+{
+  content: '>';
+  font-size: 23px;
+  color: #000;
+  font-weight: bold;
+}
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 23px;
+  color: #000;
+  font-weight: bold;
+}*/
+
+
+
+.carousel-indicators li {
+  background-color: #999;
+}
+
+.carousel-indicators li.active {
+  background-color: #000 !important;
+}
+
+.carousel-control-prev, .carousel-control-next {
+  width: 30px;
+}
+
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2fff' viewBox='0 0 8 8'%3E%3Cpath d='M4 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2fff' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+}
