uprava carousel na mobilu

--- a/src/AppBundle/Resources/public/less/general.less
+++ b/src/AppBundle/Resources/public/less/general.less
@@ -189,6 +189,12 @@ footer {
 }*/
 
 
+.carousel-indicators {
+    @media (max-width: @sm-max) {
+      bottom: -30px !important;
+    }
+  }
+
 
 .carousel-indicators li {
   background-color: #999;
