--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -32,7 +32,7 @@
         <meta property="og:description" content="{% block og_description %}Dřevené výrobky, především dekorace, vhodné jako dárek.{% endblock %}">
 
         {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('css/styles.css') }}" />
+            <link rel="stylesheet" href="{{ asset('css/styles.css') }}?v2" />
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 
