--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -58,9 +58,8 @@
             js.src = 'https://connect.facebook.net/cs_CZ/sdk.js#xfbml=1&version=v3.1';
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
-        {#
-        <div align="center" class="alert alert-success">V neděli 11. 11. 2018 v 11:11 jsme spustili nový eshop. Doufáme, že se Vám bude líbit. Platba online už v provozu.</div>
-        #}
+
+        <div align="center" class="alert alert-success">Při nákupu za více než 2000 Kč máte dopravu zdarma!</div>
         <header>
             <div class="container">
                 <div class="row">
