informace o odesilani objednavky

--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -59,7 +59,8 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
 
-        <div align="center" class="alert alert-success">Při nákupu za více než 2000 Kč máte dopravu zdarma!</div>
+        {#<div align="center" class="alert alert-success">Při nákupu za více než 2000 Kč máte dopravu zdarma!</div>#}
+        <div align="center" class="alert alert-danger">Objednávky odeslané po 9. prosinci 2018 bude odesílat až začátkem roku 2019. Děkujeme za pochopení.</div>
         <header>
             <div class="container">
                 <div class="row">
