--- a/src/AppBundle/Resources/views/ShopCart/cart.html.twig
+++ b/src/AppBundle/Resources/views/ShopCart/cart.html.twig
@@ -9,6 +9,8 @@
 
         <h3><i class="fas fa-shopping-basket"></i>&nbsp;Můj košík</h3>
 
+        <div align="center" class="alert alert-danger">Objednávky odeslané po 9. prosinci 2018 bude odesílat až začátkem roku 2019. Děkujeme za pochopení.</div>
+
         {% for label, messages in app.flashes %}
             {% for message in messages %}
             <div class="alert alert-{{ label }}" role="alert">{{ message }}</div>
