informace o odesilani objednavky

--- a/src/AppBundle/Resources/views/ShopCart/cart.html.twig
+++ b/src/AppBundle/Resources/views/ShopCart/cart.html.twig
@@ -9,7 +9,7 @@
 
         <h3><i class="fas fa-shopping-basket"></i>&nbsp;Můj košík</h3>
 
-        <div align="center" class="alert alert-danger">Objednávky odeslané po 9. prosinci 2018 bude odesílat až začátkem roku 2019. Děkujeme za pochopení.</div>
+        <div align="center" class="alert alert-danger">Objednávky přijaté po 9. prosinci 2018 bude odesílat až začátkem roku 2019. Děkujeme za pochopení.</div>
 
         {% for label, messages in app.flashes %}
             {% for message in messages %}
