--- a/src/AppBundle/Resources/views/Email/base.html.twig
+++ b/src/AppBundle/Resources/views/Email/base.html.twig
@@ -32,6 +32,26 @@
                                         E: info@gowood.cz<br />
                                     </p>
 
+                                    <br />
+                                    <br />
+
+                                    <center>
+                                        <table width="100%" cellspacing="0" cellpadding="0" border="0">
+                                            <tbody><tr>
+                                                <td>
+                                                    <p style="padding: 10px;margin-top: 10px; margin-bottom: 10px;">Přikládáme plné znění našich obchodních podmínek.<p>
+                                                    <p style="padding: 10px;margin-top: 10px; margin-bottom: 10px;">Máte jakoukoli otázku? Něco nesedí? Pište na info@gowood.cz nebo volejte na 728 870 246.
+                                                </td>
+                                            </tr>
+                                            <tr style="height:10px;line-height:10px">
+                                                <td>
+                                                    &nbsp;
+                                                </td>
+                                            </tr>
+                                            </tbody></table>
+                                    </center>
+
+
                                 </td>
                             </tr>
                             </tbody>
