--- a/src/AppBundle/Resources/views/Email/order/status/sent.html.twig
+++ b/src/AppBundle/Resources/views/Email/order/status/sent.html.twig
@@ -1,5 +1,5 @@
 <p style="padding: 10px;">Vážený zákazníku,</p>
-<p style="padding: 10px;">Vaši <strong>objednávka č. {{ data.order.id }}</strong> byla dnes expedována. O přesném termínu doručení vás bude informovat vybraná dopravní společnost.</p>
+<p style="padding: 10px;">Vaše <strong>objednávka č. {{ data.order.id }}</strong> byla dnes expedována. O přesném termínu doručení vás bude informovat vybraná dopravní společnost.</p>
 {% if data.message %}
     <p style="padding: 10px;">{{ data.message | raw }}</p>
 {% endif %}
