--- a/src/AppBundle/Resources/public/less/general.less
+++ b/src/AppBundle/Resources/public/less/general.less
@@ -3,6 +3,7 @@
 // @import url('https://fonts.googleapis.com/css?family=K2D');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&subset=latin-ext');
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script:400,700&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700&subset=latin-ext');
 
 @color1: #ccb39d;
 @color2: #b19780;
@@ -33,6 +34,7 @@
 
 body {
   font-family: 'Open Sans', 'Roboto', sans-serif;
+  // font-family: 'Roboto Slab', 'Open Sans', sans-serif;
 
   & > .container {
     padding: 20px;
