bannery na uvod - svatebni dekorace + svatebni dary

--- a/src/AppBundle/Resources/views/ShopCatalog/index.html.twig
+++ b/src/AppBundle/Resources/views/ShopCatalog/index.html.twig
@@ -11,6 +11,16 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
+                <a href="/kategorie/svatebni-dekorace-2019">
+                    <img class="d-block w-100" src="{{ asset('images/banner/svatebni_dekorace.jpg') }}" alt="Dřevěné svatební dekorace">
+                </a>
+            </div>
+            <div class="carousel-item">
+                <a href="/kategorie/svatebni-dary-2019">
+                    <img class="d-block w-100" src="{{ asset('images/banner/svatebni_dary.jpg') }}" alt="Dřevené svatební dary">
+                </a>
+            </div>
+            {#<div class="carousel-item active">
                 <a href="/produkt/dubove-hodiny-100-let">
                   <img class="d-block w-100" src="{{ asset('images/banner/hodin100let.jpg') }}" alt="Hodiny ke 100. výročí vzniku republiky">
                 </a>
@@ -30,6 +40,7 @@
                     <img class="d-block w-100" src="{{ asset('images/banner/detsky_metr.jpg') }}" alt="Dětský metr">
                 </a>
             </div>
+            #}
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
