--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -2,15 +2,13 @@
 <html lang="cs">
     <head>
 
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129407057-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            // gtag('set', {'user_id': 'USER_ID'});
-            gtag('config', 'UA-129407057-1');
-        </script>
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+                    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+                j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+                'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-WZJJ3ZT');</script>
+        <!-- End Google Tag Manager -->
 
 
         <meta charset="UTF-8" />
@@ -59,7 +57,12 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
 
-        <div align="center" class="alert alert-success">Při nákupu za více než 2000 Kč máte dopravu zdarma!</div>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WZJJ3ZT"
+                          height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
+
+        {#<div align="center" class="alert alert-success">Při nákupu za více než 2000 Kč máte dopravu zdarma!</div>#}
         {#<div align="center" class="alert alert-danger">Objednávky přijaté po 9. prosinci 2018 budeme odesílat až začátkem roku 2019. Děkujeme za pochopení.</div>#}
         <header>
             <div class="container">
