--- a/src/AppBundle/Resources/views/ShopCart/finishConfirm.html.twig
+++ b/src/AppBundle/Resources/views/ShopCart/finishConfirm.html.twig
@@ -59,4 +59,18 @@
     </div>
 
 </div>
+
+<script>
+    dataLayer.push({
+        'transactionId':'{{ order.id }}',
+        'transactionAffiliation':'gowood.cz',
+        'transactionCurrency':'CZK',
+        'transactionTotal': {{ order.subtotal }},
+        'transactionTax': 0,
+        'transactionShipping': {{ order.shippingPrice }},
+        'transactionProducts': [
+            {{ order.getDatalayerFormatItems | raw }}
+        ],
+        'event':'trackTrans'});
+</script>
 {% endblock %}
